fixing some aligning

--- a/default.scss
+++ b/default.scss
@@ -22,16 +22,5 @@ body {
     .header {
         padding: 16px;
     }
-    .main {
-        padding: 16px;
-    }
 }
 
-// @media(min-width: 720px) {
-//     body {
-//         .main {
-//             padding-left: 0;
-//             padding-right: 0;
-//         }
-//     }
-// }
