--- a/footer.scss
+++ b/footer.scss
@@ -118,7 +118,7 @@
 @media(min-width: 720px) {
     .footer {
         div {
-            max-width: 90%;
+            max-width: 85%;
             margin: auto;
             .footer_lists {
                 padding-top: 46px;
